[gd_scene format=3 uid="uid://bhpdpkln5wcu2"]

[ext_resource type="Script" uid="uid://cx60d4r2rs4g2" path="res://scenes/concentric_squares/concentric_squares.gd" id="1_e5cvm"]

[node name="ConcentricSquares" type="Node2D" unique_id=1452434999]
script = ExtResource("1_e5cvm")

[node name="SquareTimer" type="Timer" parent="." unique_id=1403289448]
autostart = true

[connection signal="timeout" from="SquareTimer" to="." method="_on_square_timer_timeout"]
